# logbook-mcp

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: security.yml  test.yml
src/logbook_mcp/: __init__.py  db.py  server.py  tools.py
tests/: test_e2e.py  test_mark_moment.py  test_server.py
