[project]
name = "logbook-mcp"
version = "0.1.0"
description = "MCP server for sea-day capture, marked moments, and USCG/TC form export"
readme = "README.md"
authors = [
    { name = "Bryan Clark", email = "clarkbw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
]

[project.scripts]
logbook-mcp = "logbook_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
